--- a/_posts/2024-01-22-xsl.md
+++ b/_posts/2024-01-22-xsl.md
@@ -152,7 +152,120 @@ En los ejemplos de esta página se ha incluido a la derecha un enlace para abrir
 
 Realmente, tanto en los ejemplos como en los ejercicios no es necesario abrir los archivos en el navegador. Basta con comprobar que se obtiene el resultado deseado en XML Copy Editor (u otro editor que estemos utilizando).
 
-Ejemplos de plantillas XSLT
+## Estructura básica de XSLT
+
+Una hoja de estilos XSL es un documento XML con extensión .xsl, en el que se define las transformaciones a realizar en el documento, mediante una serie de elementos y atributos.
+
+Primero, se debe indicar la cabecera para indicar que es un fichero XML:
+
+```xml
+<?xml version="1.0" encoding="UTF-8" ?>
+```
+
+Posteriormente se indica el siguiente elemento raíz para indicar que es un documento XSL:
+
+```xml
+<xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+```
+
+## Elementos hijos de `<xsl:stylesheet>`
+
+- `<xsl:import>`: Incluye una hoja de estilo XSLT externa en el documento de salida.
+- `<xsl:include>`: Incluye una hoja de estilo XSLT externa en el documento de salida.
+- `<xsl:strip-space>`: Elimina espacios en blanco en el documento de origen. Con el atributo obligatorio elements se seleccionan los elementos, en los cuales se eliminarán los espacios en blanco. 
+- `<xsl:preserve-space>`: Con este elemento puede especificarse qué elementos deben conservar los espacios en blanco.
+- `<xsl:output>`: Define el formato del documento de salida
+- `<xsl:key>`: Declara una clave para la búsqueda de nodos.
+- `<xsl:decimal-format>`: 
+- `<xsl:attribute-set>`: Con este elemento se definen conjuntos de atributos (<xsl:attribute>).
+- `<xsl:variable>`: Mediante este elemento podemos definir variables. Cuando se usa como elemento de alto nivel se definen variables globales, que son válidas en toda la hoja de estilo. De no ser así, las variables tendrán validez local.
+- `<xsl:param>`: Con este elemento se declaran parámetros. 
+- `<xsl:template>`: Instrucción principal de XSLT. Representa una plantilla con una serie de acciones que se realizarán si el patrón de la plantilla (atributo match) encaja con algún elemento o elementos del árbol XML.
+- `<xsl:namespace-alias>`: Se usa para sustituir un espacio de nombres en la hoja de estilos por otro espacio de nombres en el documento de salida.
+
+## Más sobre `<xsl:template>`
+
+- Establece las transformaciones a realizar en el documento.
+- Se definen utilizando el elemento `<xsl:template>`.
+- A través del atributo match, se establece el patrón. El patrón indica la rama del árbol XML sobre la que se aplica la plantilla.
+- El atributo name que dará nombre a la plantilla para poder ser invocada desde la instrucción `<xsl:call-template name="<nombreDeLaPlantilla>">`
+- Para seleccionar el árbol del documento completo, se utiliza el patrón raíz (`/`). Por ejemplo:
+
+```xml
+<xsl:template match="/">
+  instrucciones de plantilla
+</xsl:template>
+```
+
+- Las instrucciones de plantilla indican la transformación a realizar sobre el patrón. Este ejemplo, transforma el elemento nombre en su valor con formato título. Por ejemplo:
+
+```xml
+<xsl:template match="nombre">
+  <h2><xsl:value-of/><h2>
+</xsl:template>
+```
+
+![Elementos hijos de xsl:template](xsl_template.bmp)
+_Elementos hijos de xsl:template_
+
+## Elementos básicos de XSLT
+
+- `<xsl:stylesheet>`: Define el elemento raíz de la hoja de transformaciones.
+- `<xsl:transform>`: Define el elemento raíz de la hoja de transformaciones.
+- `<xsl:output>`: Define el formato del documento de salida
+- `<xsl:template>`: Instrucción principal de XSLT. Representa una plantilla con una serie de acciones que se realizarán si el patrón de la plantilla (atributo match) encaja con algún elemento o elementos del árbol XML.
+- `<xsl:apply-templates>`: Instrucción principal de XSLT. Permite aplicar plantillas sobre nodos hijos al actual.
+- `<xsl:call-template>`: Permite invocar a una plantilla por su nombre. Al aplicarse la plantilla con nombre el contexto no cambian lo que significa que en la plantilla invocada hay que utilizar las mismas rutas XPath. El atributo name es el que indica el nombre de la plantilla.
+- `<xsl:value-of>`: Visualiza el contenido del elemento indicado en el atributo select, y de sus descendientes. Existe una versión simplificada que sólo se puede usar en la creación de nuevos elementos.
+- `<xsl:text>`: Permite escribir el texto literal en la salida.
+
+## Instrucciones de control
+
+- `<xsl:for-each>`: Permite iterar sobre una lista de elementos y aplicar transformaciones sobre ellos. El atributo select define la lista de elementos sobre los que se va a iterar.
+- `<xsl:sort>`: Envía a la salida datos del documento XML de partida ordenados por algún criterio. Los atributos principales son:
+  - select: expresión XPath que indica el conjunto de nodos a ordenar.
+  - lang: indica qué idioma se utiliza al ordenar
+  - data-type: especifica el tipo de datos que se ordenarán.
+  - order: concreta si el orden es ascendente o descendente.
+  - case-order: especifica si las mayúsculas van antes que las minúsculas o viceversa (lower-first, upper-first).
+- `<xsl:if>`: Se utiliza para producir un comportamiento condicional. Sólo permite preguntar por una condición y la manera de actuar si esta es cierta. El atributo test es el que incluye la expresión XPath que debe ser cierta o falsa.
+- `<xsl:choose>`, `<xsl:when>`, `<xsl:otherwise>`: Permiten implementar un comportamiento condicional con múltiples opciones y una opción por defecto. Es equivalente a un switch de Java.
+
+## Generación de nuevos elementos
+
+- `<xsl:element>`:  Permite generar un nuevo elemento/nodo en el documento de salida. El atributo obligatorio name especifica el nombre del nuevo elemento.
+- `<xsl:attribute>`: Permite generar un nuevo atributo de un elemento/nodo. El atributo obligatorio name especifica el nombre del atributo.
+- `<xsl:comment>`: Genera un comentario en el documento de salida. Puede ser un texto literal o un dato extraído del documento XML original.
+- `<xsl:processing-instruction>`: Permite generar instrucciones de procesamiento de salida.
+- `<xsl:copy-of>`: Realiza una copia literal de un elemento a la salida. Los atributos y elementos descendientes se copiarán también.
+- `<xsl:copy>`: Realiza una copia de un nodo, pero no de sus descendientes ni atributos.
+
+## Elementos avanzados de XSLT
+
+- `<xsl:preserve-space>`:  Con este elemento puede especificarse qué elementos deben conservar los espacios en blanco.
+- `<xsl:strip-space>`: Elimina espacios en blanco en el documento de origen. Con el atributo obligatorio elements se seleccionan los elementos, en los cuales se eliminarán los espacios en blanco. 
+- `<xsl:import>`: Incluye una hoja de estilo XSLT externa en el documento de salida.
+- `<xsl:apply-imports>`: El elemento xsl:apply-imports permite buscar la plantilla adecuada para el nodo de contexto. Para ello se tienen en cuenta los nodos de contexto importados a través de `<xsl:import>`.
+- `<xsl:include>`: Incluye una hoja de estilo XSLT externa en el documento de salida.
+- `<xsl:variable>`: Mediante este elemento podemos definir variables. Cuando se usa como elemento de alto nivel se definen variables globales, que son válidas en toda la hoja de estilo. De no ser así, las variables tendrán validez local.
+- `<xsl:with-param>`: Se define el valor de un parámetro que se pasará a una plantilla.
+- `<xsl:param>`: Con este elemento se declaran parámetros.
+
+## Prioridades y resolución de conflictos
+
+- `<xsl:number>`:  Este elemento asigna un valor numérico a la posición de un elemento en el documento de salida y sirve por lo tanto para la numeración.
+- `<xsl:decimal-format>`: Define el formato de salida para los números decimales.
+- `<xsl:namespace-alias>`: Se usa para sustituir un espacio de nombres en la hoja de estilos por otro espacio de nombres en el documento de salida.
+- `<xsl:attribute-set>`: Con este elemento se definen conjuntos de atributos (`<xsl:attribute>`).
+- `<xsl:fallback>`: Define un fragmento de código a ejecutar en caso de que una nueva versión de XSLT o extensión no sea reconocida.
+- `<xsl:message>`: Se emplea para mostrar un mensaje durante el proceso de transformación en el procesador XSLT.
+- `<xsl:key>`: Declara una clave para la búsqueda de nodos.
+
+{:.question}
+¿Qué ocurrirá si a una plantilla se le asigna una prioridad mayor que 0.5?
+
+## Ejemplos de plantillas XSLT
+
 Vamos a ver ejemplos de plantillas trabajando sobre el documento siguiente:
 
 ```xml
@@ -178,13 +291,10 @@ Vamos a ver ejemplos de plantillas trabajando sobre el documento siguiente:
 
 Si los ejemplos de esta página se abren en el navegador, el resultado no coincide en casi todos los casos con el que se muestra en esta página ya que los navegadores no respetan los saltos de línea ni los espacios en blanco, ni muestran las etiquetas. Los resultados que se muestran en esta página son los que se obtienen con XML Copy Editor.
 
-Plantillas vacías o no existentes
+### Plantillas vacías o no existentes
+
 Si no hay plantillas, el procesador simplemente recorre todos los nodos y extrae el texto contenido por cada nodo.
 En el ejemplo siguiente, el resultado incluye el contenido de los nodos `<título>` y `<autor>` puesto que no hay ninguna plantilla.
-
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -208,13 +318,8 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 Si hay una plantilla vacía, el procesador no genera ningún resultado en el documento final ni recorre los nodos hijos.
 En el ejemplo siguiente, el resultado incluye el contenido de los nodos `<titulo>`, ya que no hay regla para ellos, pero los de `<autor>` se pierden porque la plantilla es vacía.
-
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -238,11 +343,7 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 En el caso más extremo, si la plantilla vacía se aplica al nodo raíz, el procesador no genera ningún resultado en el documento final ni recorre ningún nodo hijo.
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -260,14 +361,11 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
-La instrucción `<xsl:value-of>`
+### La instrucción `<xsl:value-of>`
+
 La instrucción `<xsl:value-of>` extrae el contenido del nodo seleccionado.
 
 En el ejemplo siguiente, el documento final contiene los autores de los libros porque la plantilla los genera con la instrucción `<xsl:value-of>`. Como se ha aplicado una plantilla al nodo `<libro>`, sus hijos (`<titulo>`, `<autor>` y `<fechaPublicacion>`) no se recorren. Por eso, los títulos de los libros no aparecen en el documento final.
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -290,11 +388,7 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 En el ejemplo siguiente, se obtienen el titulo y el autor de los libros, pero uno a continuación de otro. Los saltos de línea se crean tras cada aplicación de la regla (es decir, a cada libro), pero no en el interior de la regla.
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -318,11 +412,7 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 En el ejemplo siguiente, los autores se obtienen gracias a la regla que extrae el contenido del nodo (el carácter punto "." hace referencia al propio elemento) y los títulos se obtienen porque al no haber reglas para ese nodo se extrae el contenido. El resultado es el mismo que el del ejemplo 1-1, pero por motivos distintos.
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -350,13 +440,10 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 También se pueden extraer los valores de los atributos, utilizando @.
 
 En el ejemplo siguiente, las fechas de publicación se obtienen gracias a la regla que extraen el valor del atributo y los títulos y autores se obtienen porque al no haber reglas para ese nodo se extrae el contenido.
-XSLT
-Resultado
-Enlace
+
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -387,14 +474,11 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
-Generar texto adicional
+### Generar texto adicional
+
 Se puede generar texto escribiéndolo en la regla, por ejemplo, código html.
 
 En el ejemplo siguiente se obtienen los nombres de los autores porque la regla selecciona el nodo `<libro>` como en el ejemplo, 2-1, pero además generamos las etiquetas `<p>`. El resultado sigue sin verse bien en el navegador, porque aunque hay etiquetas `<p>`, falta la etiqueta global `<html>`.
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -417,13 +501,10 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 Dentro de la regla podemos hacer referencia a varios subnodos.
 
 En el ejemplo siguiente se obtienen los nombres de los autores y los títulos de los libros porque la regla selecciona el nodo `<libro>` como en el ejemplo, 2-1, pero además generamos las etiquetas `<p>`. El resultado sigue sin verse bien en el navegador, porque aunque hay etiquetas `<p>`, falta la etiqueta global `<html>`.
-XSLT
-Resultado
-Enlace
+
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -452,13 +533,8 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 Los siguientes ejemplos intentan conseguir el mismo resultado que el ejemplo anterior (ejemplo 3-2), pero utilizando dos reglas, y no lo consiguen:
 
-XSLT
-Resultado
-Enlace
-
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
@@ -485,11 +561,6 @@ Enlace
 <p>Conversación en la catedral</p>
 ```
 {: file="salida.xml" }
-
-Enlace a ejemplo
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -518,15 +589,12 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 ¿Por qué en un caso se obtienen sólo los títulos y en el otro sólo los autores? Porque el procesador XSLT sólo aplica una regla a cada nodo. Si tenemos dos reglas para el mismo nodo, el procesador sólo aplica una de ellas (la última, en este caso).
 
 Además de generar etiquetas, se puede generar texto.
 
 En el ejemplo siguiente se generan frases a partir del contenido de los nodos.
-XSLT
-Resultado
-Enlace
+
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -551,14 +619,11 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
-Aplicar reglas a subnodos: la instrucción `<xsl:apply-templates>`
+### Aplicar reglas a subnodos: la instrucción `<xsl:apply-templates>`
+
 La instrucción `<xsl:apply-templates>` hace que se apliquen a los subelementos las reglas que les sean aplicables.
 
 En el ejemplo siguiente, se genera la etiqueta `<html>` además de unos párrafos con los nombres de los autores. Este ejemplo sí que se puede ver en el navegador ya que se interpreta como html.
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -589,23 +654,21 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 La primera regla sustituye el elemento raíz (y todos sus subelementos) por las etiquetas `<html>` y `<h1>`, pero además aplica a los subelementos las reglas que les son aplicables. En este caso, sólo hay una regla para los elementos `<libro>` que generan los párrafos.
 
-Saltos de línea y espacios en blanco: las instrucciones `<xsl:text>` y `<xsl:strip-space>`
+### Saltos de línea y espacios en blanco: las instrucciones `<xsl:text>` y `<xsl:strip-space>`
+
 Al transformar un documento, los procesadores XSLT incorporan saltos de línea y espacios en blanco en el resultado, pero no lo hacen de forma uniforme. Por ejemplo, XML Copy Editor y Notepad++ (con el plug-in XML Tools) producen diferentes resultados.
 
 No parece haber una solución sencilla que funcione en todos los procesadores, pero sí soluciones que funcionen en cada uno de ellos.
 
-La instrucción `<xsl:strip-space>`
+### La instrucción `<xsl:strip-space>`
+
 En el caso de XML Copy Editor, la forma más sencilla de mejorar el formato de presentación de los resultados, eliminando líneas en blanco innecesarias y sangrando los elementos anidados, es utilizar la instrucción `<xsl:strip-space>`. Pero debe tenerse en cuenta que esta instrucción no produce el mismo resultado en otros procesadores XSLT (como en Notepad++ con XML Tools).
 
 La instrucción `<xsl:strip-space>` permite indicar si los elementos que contienen únicamente espacios en blanco se incluyen en la transformación o no.
 
 En el ejemplo anterior (del apartado sobre la instrucción `<xsl:apply-templates>`) la etiqueta `<h1>` se generaba en la misma línea que la etiqueta `<html>`, pero en el ejemplo siguiente se generan en líneas distintas (y las etiquetas se muestran sangradas) al utilizar la instrucción `<xsl:strip-space>`:
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -638,16 +701,13 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
-La instrucción `<xsl:text>`
+### La instrucción `<xsl:text>`
+
 En el caso de Notepad++ con XML Tools, se puede mejorar el formato de presentación de los resultados, insertando líneas en blanco innecesarias y sangrando los elementos anidados, utilizando la instrucción `<xsl:text>`. Pero debe tenerse en cuenta que esta instrucción no permite eliminar líneas en blanco que se producen en otros procesadores (como en XML Copy Editor).
 
 La instrucción `<xsl:text>` permite generar texto que no se puede generar simplemente añadiéndolo (saltos de líneas y espacios en blanco, por ejemplo).
 
 En el ejemplo anterior (del apartado sobre la instrucción `<xsl:apply-templates>`) la etiqueta `<h1>` se generaba en la misma línea que la etiqueta `<html>`, pero en el ejemplo siguiente se generan en líneas distintas al añadir un salto de línea con la entidad de carácter `&#10;` (y un par de espacios para alinear la etiqueta `<h1>` con las etiquetas `<p>`):
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -680,8 +740,8 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
-La instrucción `<xsl:attribute>`
+### La instrucción `<xsl:attribute>`
+
 La instrucción `<xsl:attribute>` permite generar un atributo y su valor. Se utiliza cuando el valor del atributo se obtiene a su vez de algún nodo.
 
 Por ejemplo, a partir del siguiente documento XML, se quiere generar la etiqueta `<img>`. en la que el valor del atributo src sea el contenido de la etiqueta `<imagen>`.
@@ -695,11 +755,7 @@ Por ejemplo, a partir del siguiente documento XML, se quiere generar la etiqueta
   </licencia>
 </licencias>
 No se puede utilizar la instrucción `<xsl:value-of>` como en el ejemplo incorrecto siguiente:
-Hueco
-XSLT
-Resultado
-Enlace
-Incorrecto
+
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
@@ -717,13 +773,9 @@ Error at line 5, column 19: not well-formed (invalid  token)
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 En este caso el problema no es debido a la utilización de comillas dobles (también daría error si se hubieran utilizado comillas simples o entidades), sino que es necesario utilizar la instrucción `<xsl:attribute>`.
 
 Para generar un atributo en una etiqueta, es necesario utilizar la instrucción `<xsl:attribute>`, como en el ejemplo siguiente:
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -750,15 +802,11 @@ Enlace
 ```
 {: file="salida.xml" }
 
-Enlace a ejemplo
 En la hoja de estilo XSLT, la etiqueta `<img>` se escribe con apertura y cierre, aunque en el resultado aparece como etiqueta monoatómica.
 
 De todas formas, el navegador no mostraría todavía la imagen, puesto que no interpreta la etiqueta `<img>` como la etiqueta de imagen del html.
 
 Como en ejemplos anteriores, para que la imagen se muestre en el navegador sería necesario generar también la etiqueta `<html>`:
-XSLT
-Resultado
-Enlace
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -797,3 +845,4 @@ Enlace
 - <https://es.wikipedia.org/wiki/Extensible_Stylesheet_Language>
 - <https://programminghistorian.org/es/lecciones/transformacion-datos-xml-xsl>
 - <https://www.mclibre.org/consultar/xml/lecciones/xml-xslt.html>
+- <https://www.data2type.de/es/xml-xslt-xslfo/xslt/referencia-xslt1#xsl%3Atemplate>
